<resources>
    <string name="app_name">CampusSafari</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_oblog">Observation Log</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Sign Out</string>

    <!-- Strings used in ProfilrFragment   -->
    <string name="profile_edit">Edit</string>
    <string name="profile_changePassword">Change Password</string>

    <!-- Strings used in NicknameActivity   -->
    <string name="nickname_updateNickname">Update Nickname</string>
    <string name="nickname_newNickname">New Nickname: </string>
    <string name="nickname_cancel">Cancel</string>
    <string name="nickname_submit">Submit</string>

    <!-- Strings used in PasswordActivity   -->
    <string name="psswrd_update">Update Password</string>
    <string name="psswrd_old">Old Password</string>
    <string name="psswrd_old2">Confirm Old Password</string>
    <string name="psswrd_new">New Password</string>
    <string name="psswrd_change">Update My Password</string>
    <string name="psswrd_cancel">Cancel</string>
    <string name="psswrd_confirm">Confirm New Password</string>

    <string name="title_location_permission">Enable Location Services</string>
    <string name="text_location_permission">Please allow us to use your location to play the game. If you do not allow us, the app crashes.</string>
    <string name="ok">Ok</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings used in ProfileCreationActivity-->
    <string name="pcreate_header">Create your profile</string>
    <string name="pcreate_nicknamecreate">Choose a nickname</string>
    <string name="pcreate_finishbutton">Finish</string>
    <string name="pcreate_avatar">Choose your avatar</string>

    <!-- Strings used in WildlifeActivity & xml-->
    <string name="wildlife_pic">Wildlife Image</string>
    <string name="wildlife_cname">Common Name</string>
    <string name="wildlife_sname">Scientific Name</string>
    <string name="wildlife_taxon">Taxon</string>
    <string name="wildlife_level">Level</string>
    <string name="wildlife_points">Points</string>
    <string name="wildlife_nname">Nickname</string>
    <string name="wildlife_ff">Fun Fact</string>
    <string name="wildlife_rename">Rename: </string>
    <string name="wildlife_submit">Submit</string>
    <string name="wildlife_return">Return to Map</string>
    <string name="wildlife_citation"><a href="http://www.google.com">Citation</a></string>
    <!-- Strings used in LeaderBoard & xml-->
    <string name="brd_header">Top Players</string>
    <string name="brd_member">Loading...</string>

    <!-- Strings used in Admin & xml-->
    <string name="admin_login">Log into Database</string>
    <string name="admin_user">See user data</string>
    <string name="admin_time">Locate Timestamps</string>
    <string name="admin_addpin">Add pin</string>
    <string name="admin_removepin">Remove pin</string>
    <string name="admin_howto">How To:</string>

    <string name="log_button">Log</string>
    
    <string-array name="sortby">
        <item>Nickname</item>
        <item>Common Name</item>
        <item>Scientific Name</item>
        <item>Taxon</item>
        <item>Level</item>
        <item>Points</item>
    </string-array>

    <string-array name="achievement_sortby">
        <item>Title</item>
        <item>Most Progress</item>
        <item>Least Progress</item>
    </string-array>

</resources>
