<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_oblog"
            android:icon="@drawable/ic_log"
            android:title="@string/menu_oblog" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_achievements"
            android:title="@string/menu_achievements"
            android:tag="ach"/>
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/menu_leaderboard" />
        <item
        android:id="@+id/nav_admin"
        android:icon="@drawable/ic_reports"
        android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
