<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.juniordesignteam9323.campussafari.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.juniordesignteam9323.campussafari.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_oblog"
        android:name="com.juniordesignteam9323.campussafari.ui.oblog.OblogFragment"
        android:label="@string/menu_oblog"
        tools:layout="@layout/fragment_oblog" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.juniordesignteam9323.campussafari.ui.achievements.AchievementsFragment"
        android:label="@string/menu_achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.juniordesignteam9323.campussafari.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/nav_friends"
        android:name="com.juniordesignteam9323.campussafari.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.juniordesignteam9323.campussafari.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.juniordesignteam9323.campussafari.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>