<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wildlife"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/wildlife_level"
    android:orientation="vertical">

    <Button
        android:id="@+id/wildlife_return"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="66dp"
        android:background="@color/colorPrimary"
        android:text="@string/wildlife_return"
        android:textColor="#FFFFFF"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/wildlife_error"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="125dp"
        android:textColor="@color/colorError"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/wildlife_nname"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="14dp"
        android:text="@string/wildlife_nname"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/wildlife_pic"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wildlife_level"
        android:layout_alignParentStart="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/wildlife_pic"
        app:srcCompat="@drawable/avatar_bear" />

    <TextView
        android:id="@+id/wildlife_points"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_below="@+id/wildlife_nname"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:layout_toEndOf="@+id/wildlife_level"
        android:text="@string/wildlife_points"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wildlife_level"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_below="@+id/wildlife_nname"
        android:layout_marginStart="88dp"
        android:layout_marginTop="12dp"
        android:text="@string/wildlife_level"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wildlife_pic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:background="#4A53AF4C"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wildlife_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/wildlife_cname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wildlife_scientific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wildlife_common"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/wildlife_sname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/wildlife_taxon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wildlife_scientific"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/wildlife_taxon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wildlife_ff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="0dp"
            android:text="@string/wildlife_ff"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wildlife_rename"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="228dp"
        android:text="@string/wildlife_rename"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/wildlife_input"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/wildlife_points"
        android:layout_alignBottom="@id/wildlife_rename"
        android:layout_marginLeft="-50dp"
        android:layout_marginBottom="-22dp"
        android:ems="10"
        android:inputType="textUri|textPersonName" />

    <Button
        android:id="@+id/wildlife_submit"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="157dp"
        android:background="#FF7A5E"
        android:text="@string/wildlife_submit"
        android:textColor="#FFFFFF" />

</RelativeLayout>